[gd_scene load_steps=4 format=3 uid="uid://dmgj20lll0ndw"]

[ext_resource type="Script" path="res://entities/Placeholder.gd" id="1_6awq0"]
[ext_resource type="Texture2D" uid="uid://c381b46a1le7a" path="res://circle.svg" id="1_8epfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wngyn"]
size = Vector2(96, 96)

[node name="Placeholder" type="Line2D"]
points = PackedVector2Array(-48, -48)
script = ExtResource("1_6awq0")

[node name="c2_red" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 1
position = Vector2(-16, -32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_8epfe")

[node name="c2_green" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
z_index = 1
position = Vector2(16, -32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_8epfe")

[node name="c1_red" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 1
position = Vector2(-16, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_8epfe")

[node name="c1_green" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
z_index = 1
position = Vector2(16, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_8epfe")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_font_sizes/font_size = 10
text = "? unknown"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wngyn")
